[project]
name = "machine-learning-helpers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2023.7.22",
    "ipykernel>=6.29.5",
    "ipython>=8.0.0",
    "joblib>=1.2.0",
    "jsonpath-ng>=1.7.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.4.0",
    "pandas-flavor>=0.6.0",
    "polars>=0.16.0",
    "pyjanitor>=0.24.0",
    "rapidfuzz>=3.13.0",
    "requests>=2.28.0",
    "rich>=12.0.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.2",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
torch = ["torch>=1.12.0"]
